# Project

./: CMakeLists.txt  CmakeList1.txt  CmakeList1.txt.txt  README.md  main.cpp
Counter/: Counter.cpp  Counter.hpp
Figure/: Figure.cpp  Figure.hpp
Figure/Ball/: Ball.cpp  Ball.hpp
Figure/Rectnagle/: Rectangle.cpp  Rectangle.hpp
Game/: Game.cpp  Game.hpp
PublicVarible/: PublicVar.cpp  PublicVar.hpp
Settings/: Settings.cpp  Settings.hpp
